// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getChildrenObjects {deep: true}: after delete 1`] = `
[
  "array",
  "1-1",
  "array",
  "1-1-1",
  "1-1-2",
  "1-2",
  "array",
  "1-2-1",
  "1-2-2",
]
`;

exports[`getChildrenObjects {deep: true}: after re-add 1`] = `
[
  "array",
  "1-1",
  "array",
  "1-1-1",
  "1-1-2",
  "1-2",
  "array",
  "1-2-1",
  "1-2-2",
  "1-3",
  "array",
  "1-3-1",
  "1-3-2",
]
`;

exports[`getChildrenObjects {deep: true}: initial 1`] = `
[
  "array",
  "1-1",
  "array",
  "1-1-1",
  "1-1-2",
  "1-2",
  "array",
  "1-2-1",
  "1-2-2",
  "1-3",
  "array",
  "1-3-1",
  "1-3-2",
]
`;
